--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-search-params",
+	"name": "sveltekit-search-params",
 	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev",
@@ -12,6 +12,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
+		"@types/lz-string": "^1.3.34",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
@@ -21,7 +22,13 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+        "lz-string": "^1.4.4"
 	},
-	"type": "module"
+	"type": "module",
+    "peerDependencies": {
+        "lz-string": "^1.4.4",
+		"svelte": "^3.44.0",
+		"@sveltejs/kit": "next"
+    }
 }
