--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0",
-		"lz-string": "^1.4.4"
+		"vite": "^3.1.0"
 	},
+    "dependencies": {
+        "lz-string": "^1.4.4"
+    },
 	"type": "module",
 	"peerDependencies": {
 		"lz-string": "^1.4.4",
