--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.9",
 	"scripts": {
 		"dev": "vite dev",
+		"version:patch": "npm version patch",
+		"version:minor": "npm version minor",
+		"version:major": "npm version major",
 		"build": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
