--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
 	"name": "sveltekit-search-params",
-	"version": "0.1.3",
+	"version": "0.1.4",
+	"repository": "git+https://github.com/paoloricciuti/sveltekit-search-params.git",
+	"author": "Paolo Ricciuti",
+	"license": "MIT",
+	"homepage": "https://sveltekit-search-params.netlify.app",
+	"keywords": [
+		"sveltekit",
+		"svelte",
+		"reactive",
+		"search-params",
+		"search params",
+		"search-parameters",
+		"search parameters",
+		"query",
+		"query parameters",
+		"query-parameters",
+		"query params",
+		"query-params"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"version:patch": "npm version patch",
@@ -12,7 +30,7 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.47",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
 		"@types/lz-string": "^1.3.34",
@@ -22,7 +40,9 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-material-icons": "^2.0.4",
 		"svelte-preprocess": "^4.10.6",
+		"svelte-typewriter-store": "^0.0.4",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
@@ -32,8 +52,8 @@
 	},
 	"type": "module",
 	"peerDependencies": {
+		"@sveltejs/kit": "next",
 		"lz-string": "^1.4.4",
-		"svelte": "^3.44.0",
-		"@sveltejs/kit": "next"
+		"svelte": "^3.44.0"
 	}
 }
