--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
+		"start": "vite",
 		"version:patch": "npm version patch",
 		"version:minor": "npm version minor",
 		"version:major": "npm version major",
