--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -14,7 +14,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm i
       - run: npm run build
-      - run: cd ./package
-      - run: npm publish
+      - working-directory: package
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
