--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltekit-search-params",
-	"version": "0.1.12",
+	"version": "0.1.13",
 	"repository": "git+https://github.com/paoloricciuti/sveltekit-search-params.git",
 	"author": "Paolo Ricciuti",
 	"license": "MIT",
@@ -32,9 +32,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.47",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0",
 		"@sveltejs/package": "next",
-		"@types/lz-string": "^1.3.34",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
@@ -48,13 +47,9 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"dependencies": {
-		"lz-string": "^1.4.4"
-	},
 	"type": "module",
 	"peerDependencies": {
-		"@sveltejs/kit": "next",
-		"lz-string": "^1.4.4",
+		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.44.0"
 	}
 }
