--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltekit-search-params",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"repository": "git+https://github.com/paoloricciuti/sveltekit-search-params.git",
 	"author": "Paolo Ricciuti",
 	"license": "MIT",
@@ -49,6 +49,7 @@
 	},
 	"type": "module",
 	"peerDependencies": {
-		"svelte": "^3.44.0"
+		"svelte": "^3.44.0",
+		"@sveltejs/kit": "^1.0.0"
 	}
 }
