--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"build": "svelte-kit sync && svelte-package -o package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"publish": "changeset publish"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.47",
