--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"publish": "pnpm run build && changeset publish"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.26.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.47",
 		"@sveltejs/kit": "^1.0.7",
 		"@sveltejs/package": "^2.0.0",
@@ -78,8 +79,5 @@
 				"./package/sveltekit-search-params.d.ts"
 			]
 		}
-	},
-	"dependencies": {
-		"@changesets/cli": "^2.26.0"
 	}
 }
