--- a/package.json
+++ b/package.json
@@ -26,20 +26,29 @@
 		"version:major": "npm version major",
 		"build:landing": "vite build",
 		"build": "svelte-kit sync && svelte-package -o package",
+		"build:playground": "cd playground && pnpm run build",
+		"preview:playground": "cd playground && pnpm run preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
-		"publish": "pnpm run build && changeset publish"
+		"format": "prettier --write .",
+		"publish": "pnpm run build && changeset publish",
+		"test": "npm run test:integration && npm run test:unit",
+		"test:integration": "playwright test",
+		"test:unit": "vitest"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.0",
+		"@playwright/test": "^1.40.1",
 		"@sveltejs/adapter-static": "^1.0.0-next.47",
-		"@sveltejs/kit": "^1.0.7",
+		"@sveltejs/kit": "^1.29.1",
 		"@sveltejs/package": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-material-icons": "^2.0.4",
@@ -47,7 +56,8 @@
 		"svelte-typewriter-store": "^0.0.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^4"
+		"vite": "^4",
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"peerDependencies": {
