--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 	},
 	"type": "module",
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0 || ^2.0.0",
 		"svelte": "^3.55.0 || ^4.0.0"
 	},
 	"exports": {
