--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
 		"format": "prettier --write .",
 		"publish": "pnpm run build && changeset publish",
 		"test": "npm run test:integration && npm run test:unit",
+		"test:integration:ui": "playwright test --ui",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"changeset": "changeset"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.0",
