--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/package": "^2.2.6",
 		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.2",
-		"@typescript-eslint/parser": "^7.0.2",
-		"eslint": "^8.56.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint": "^9.8.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.43.0",
+		"globals": "^15.8.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.1",
 		"svelte": "^4.2.11",
@@ -58,6 +58,7 @@
 		"svelte-typewriter-store": "^0.0.5",
 		"tslib": "^2.6.2",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "8.0.0-alpha.54",
 		"vite": "^5.1.3",
 		"vitest": "^2.0.0"
 	},
